--- a/client/src/admin/Login.css
+++ b/client/src/admin/Login.css
@@ -1,14 +1,14 @@
-html,
-body {
+
+html,body,#root{
   height: 100%;
 }
 
-#root{
-    height: 100%;
-    text-align: center!important;
+.Login{
+  height: 100%;
+  text-align: center!important;
 }
 
-#root {
+.Login {
   display: -ms-flexbox;
   display: -webkit-box;
   display: flex;
@@ -42,7 +42,7 @@ body {
 .form-signin .form-control:focus {
   z-index: 2;
 }
-.form-signin input[type="email"] {
+.form-signin input[type="text"] {
   margin-bottom: -1px;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
